--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="gifts-content">
                 <p>A legnagyobb ajándék számunkra, ha ott leszel velünk életünk eddigi legfontosabb eseményén.</p>
-                <img src="/images/wedding-landing-gifts.png" class="event-imgs" alt="Gifts">
+                <img src="./images/wedding-landing-gifts.png" class="event-imgs" alt="Gifts">
                 <p>Ha mégis hoznál valamit, kérünk vedd figyelembe, hogy a helyünk meglehetősen limitált az otthonunkban. Felesleges talicskával idetolnod az ajándékodat, egy borítékba bújtatva tökéletesen megfelel.  </p>
             </div>
         </section>
