--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="program-point" id="party">
                     <h3>Vacsora</h3>
-                    <img src="/images/wedding-landing-party.png" class="event-imgs" alt="Cake Photo">
+                    <img src="./images/wedding-landing-party.png" class="event-imgs" alt="Cake Photo">
                         <div class="events-texts">
                             <p>Trófea Grill Étterem Újbuda</p>  
                             <p>1117 Budapest, Hauszmann A. u. 6/b.</p>
