--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,800;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="/images/wedding-landing-favicon.png">
+    <script src="./script.js"></script>
     <title>Sasi & Gyuri</title>
 </head>
 <body>
@@ -242,5 +243,4 @@
         </div>
     </footer>
 </body>
-<script src="./sript.js"></script>
 </html>
