--- a/index.html
+++ b/index.html
@@ -215,5 +215,5 @@
                                                     </div>
                                                 </footer>
                                             </body>
-                                            <script src="/script.js"></script>
+                                            <script src="./Scripts/script.js"></script>
                                             </html>
