--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                                     <p class="answer">Az állófogadással maximum 17:00 óráig lehet számolni, a vacsorával pedig 23:00-ig.</p>
                                                 </div>
                                                 <div id="regist">
-                                                    <h2 class="section-headline">Regisztáció</h2>
+                                                    <h2 class="section-headline">Regisztráció</h2>
                                                 </div>
                                                 <div class="question form">Kérlek, segítsd a munkánkat azzal, hogy visszajelzel, ott tudsz-e lenni velünk,
                                                     és ha igen, hány ember jön veled! Akik együtt jöttök (családok, párok), azok közül egy ember
@@ -143,7 +143,7 @@
                                                         <div class="form">
                                                             <div class="form-grid-item1">
                                                                 <label for="full-name">Név*</label>
-                                                                <input type="text" id="full-name" name="Full-Name" placeholder="Lakatos Dzsúlió Dáridó"
+                                                                <input type="text" id="full-name" name="Full-Name" placeholder="Kolombusz Kristóf"
                                                                 required>
                                                             </div>
                                                             <div class="form-grid-item2">
