--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <p class="question">És a vacsorahelyszínhez?</p>
                             <p class="answer">A leggyorsabban a 2-es metróval az Örs vezér tere megállótól a Puskás Ferenc
                                 stadionig, majd az 1-es villamossal a Hauszmann Alajos utca / Szerémi út megállig tudsz eljutni a
-                                vacsorahelyszínre. </p>
+                                vacsorahelyszínre. Javasoljuk, hogy a 16:49-es 480-as jelzésű busszal legkésőbb indulj el, hogy ne maradj le a vacsora kezdetéről. </p>
                             </div>
                             <div class="question-group">
                                 <h3 class="faq-content-headline">Állófogadás és Vacsora</h3>
@@ -125,8 +125,8 @@
                                         <div class="question-group">
                                             <h3 class="faq-content-headline">Egyéb apróságok</h3>
                                             <p class="question">Problémám / kérdésem van az esküvő napján. Kivel tudok beszélni?</p>
-                                            <p class="answer">Kérlek hívd "Megoldó Mártát" ezen a számon: <a href="tel:+36 30 000 0000">+36 30 000
-                                                0000.</a>
+                                            <p class="answer">Kérlek hívd Dürr Balázs barátunkat ezen a számon: <a href="tel:+36 20 746 1024">+36 20 746
+                                                1024</a>
                                                 <p class="question">Honnan tudhatom, hogy hivatalos vagyok a vacsorára?</p>
                                                 <p class="answer">Ha a meghívón, amit adtunk Neked, szerepel az esti vacsora időpontja (18:00) akkor
                                                     várunk a vacsora helyszínére is. </p>
@@ -136,9 +136,10 @@
                                                 <div id="regist">
                                                     <h2 class="section-headline">Regisztráció</h2>
                                                 </div>
-                                                <div class="question form">Kérlek, segítsd a munkánkat azzal, hogy visszajelzel, ott tudsz-e lenni velünk,
+                                                <div class="question form regist-p">Kérlek, segítsd a munkánkat azzal, hogy visszajelzel, ott tudsz-e lenni velünk,
                                                     és ha igen, hány ember jön veled! Akik együtt jöttök (családok, párok), azok közül egy ember
                                                     regisztrációját kérjük tőletek a lenti kérdőív kitöltésével.</div>
+                                                    <div class="question form regist-p">Ha vacsorameghívót is kaptál (a meghívón szerepel a vacsora időpontja) és el is tudsz jönni a vacsorára, kérünk, hogy a lenti kérdésnél az igent válaszd. Ha nem vacsorás meghívót kaptál vagy nem tudsz eljönni, kérünk jelölj nemet!</div>
                                                     <form action="https://formspree.io/f/mrgwzywa" method="POST" class="form-container">
                                                         <div class="form">
                                                             <div class="form-grid-item1">
