--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                                                             </div>
                                                             <div class="form-grid-item5" id="form-textarea">
                                                                 <textarea name="Kiket regiszrál:" id="message"
-                                                                placeholder="Kérjük sorold fel, hogy kikkel érkezel. (gyerekek is)" required></textarea>
+                                                                placeholder="Kérjük sorold fel, hogy kikkel érkezel. (gyerekek is)"></textarea>
                                                             </div>
                                                             <input type="submit" value="Regisztrálok" class="contact-input-type-container form-grid-item6">
                                                         </div>
