--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <p class="answer">A közös fotók elkészítésére az állófogadással párhuzamosan, a szertartást követő
                                     gratulációk fogadása után lesz lehetőség. A fotókat csoportonként készítjük.</p>
                                     <p class="question">Mit viseljek? Van dresscode?</p>
-                                    <p class="answer">Gyere abban amiben kényelmesen érzed magad, és úgy érzed megfelel egy esküvőre. Ha ez
+                                    <p class="answer">Gyere abban amiben kényelmesen érzed magad, és úgy érzed, megfelel egy esküvőre. Ha ez
                                         segít, casual / business casual a hölgyeknek, smart casual / informal az uraknak tökéletes
                                         választás.</p>
                                         <p class="question">
@@ -188,7 +188,7 @@
                                                                 </fieldset>
                                                             </div>
                                                             <div class="form-grid-item5" id="form-textarea">
-                                                                <textarea name="Kiket regiszrál:" id="message"
+                                                                <textarea name="Kiket regiszrál" id="message"
                                                                 placeholder="Kérjük sorold fel, hogy kikkel érkezel. (gyerekek is)"></textarea>
                                                             </div>
                                                             <input type="submit" value="Regisztrálok" class="contact-input-type-container form-grid-item6">
@@ -200,7 +200,7 @@
                                                         <h2>Kapcsolat</h2>
                                                     </div>
                                                     <div class="contact-content">
-                                                        <p>Ha bármi kérdésed van az alábbi elérhetőségeken hívhatsz minket, vagy írhatsz nekünk.</p>
+                                                        <p>Ha bármi kérdésed van, az alábbi elérhetőségeken hívhatsz minket vagy írhatsz nekünk.</p>
                                                         <p>Telefon:</p>
                                                         <p><a href="tel:+36 30 560 0907">+36 30 560 0907</a> (Sasi) </p>
                                                         <p><a href="tel:+36 20 778 9744">+36 20 778 9744</a> (Gyuri) </p>
